# onnxruntime-cpp-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpp/: main.cpp
python/: check_inference_result.py  output_resource.py
